updated form styles for portfolios

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -18,13 +18,9 @@
  
     <%= render 'shared/portfolio_nav' %>
   
-    <%= render 'shared/portfolio_masthead' %>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
 
-    <!-- end of masthead -->
 
-    <%= render "shared/nav", location: 'top' %>
-
-    <%= login_helper %>
 
     <%= yield %>
 
