--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,6 +1,8 @@
-<h1>Create a new Portfolio Item</h1>
+<div class="container portfolio-form">
 
-<%= render 'form', portfolio: @portfolio %>
+  <h1>Create a new Portfolio Item</h1>
 
+  <%= render 'form', portfolio: @portfolio %>
 
+</div>
 
