--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,30 +1,43 @@
 
 <%= form_with(model: @portfolio, local: true) do |form| %>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, id: :blog_title, class:'form-control' %>
+      </div 
 
+      <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :title, id: :blog_title, class:'form-control' %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :blog_title %>
-  </div 
+    <div class="col-md-6">
 
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_field :title, id: :blog_title %>
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, id: :blog_body, class:'form-control' %>
+      </div>
+      <h2>Technologies Used</h2>
+      <div>
+        <%= form.fields_for :technologies do |technology_form| %>
+        <div class="form-group">
+          <%= technology_form.label :name %>
+          <%= technology_form.text_field :name, class:'form-control' %>
+        </div>
+        <% end %>
+      </div>
+      <div class="actions">
+        <%= form.submit 'Save Portfolio Item', class: 'btn btn-primary btn-block' %>
+      </div>
+
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :blog_body %>
-  </div>
-  <ul>
-    <%= form.fields_for :technologies do |technology_form| %>
-    <li>
-      <%= technology_form.label :name %>
-      <%= technology_form.text_field :name %>
-    </li>
-    <% end %>
-  </ul>
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+
+
+  
+
+  
 <% end %>
