--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>Edit This Portfolio Item</h1>
+<div class="container portfolio-form">
+  <h1>Edit This Portfolio Item</h1>
 
-<%= render 'form', portfolio: @portfolio %>
+  <%= render 'form', portfolio: @portfolio %>
+</div>
