--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -3,12 +3,7 @@
   <div class="inner">
     <h3 class="masthead-brand">Cherish Clark</h3>
     <nav class="nav nav-masthead">
-      <%= link_to "Home", root_path, class:"nav-link"%>
-      <%= link_to "About Me", about_path,class:"nav-link"%>
-      <%= link_to "Contact", contact_path, class:"nav-link"%>
-      <%= link_to "Blogs", blogs_path, class:"nav-link"%>
-      <%= link_to "Portfolio", portfolios_path, class:"nav-link"%> 
-      <%= login_helper 'nav-link' %>       
+      <%= nav_helper "span", "nav-link" %> 
     </nav>
   </div>
 </header>
