--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,9 +1,9 @@
-
-<header class="masthead clearfix">
+<div class="masthead clearfix">
   <div class="inner">
-    <h3 class="masthead-brand">Cherish Clark</h3>
-    <nav class="nav nav-masthead">
-      <%= nav_helper "span", "nav-link" %> 
+    <h3 class="masthead-brand">Jordan Hudgens</h3>
+    <nav class="nav nav-masthead app-nav">
+      <%= nav_helper 'nav-link', 'span' %>
+      <%= login_helper 'nav-link' %>
     </nav>
   </div>
-</header>
+</div>
