--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,7 +1,3 @@
 <div class="<%= location %>">
-<%= link_to "Home", root_path%>
-<%= link_to "About Me", about_path%>
-<%= link_to "Contact", contact_path%>
-<%= link_to "Blogs", blogs_path%>
-<%= link_to "Portfolio", portfolios_path%>
+<%= nav_helper "span", "nav-link" %>
 </div>
