--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,55 +1,7 @@
-
-<<<<<<< HEAD
-<<<<<<< HEAD
-<div class="site-wrapper">
-
-  <div class="site-wrapper-inner">
-=======
-=======
-
->>>>>>> e602ff768d81619582b6fee7acfb58d4105855a6
-<main role="main" class="inner cover">
-  <h1 class="cover-heading">Cherish Clark's Portfolio</h1>
-  <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+<div class="inner cover">
+  <h1 class="cover-heading">Welcome.</h1>
+  <p class="lead">Software development should not be a secret process, when I take on a new project I make it my goal to not only deliver a well crafted product but to also ensure that each stage of the process is fully communicated.</p>
   <p class="lead">
-    <%= link_to "Learn More", about_path, class: "btn btn-lg btn-secondary" %>
+    <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
   </p>
-</main>
-<<<<<<< HEAD
->>>>>>> design
-=======
-
->>>>>>> e602ff768d81619582b6fee7acfb58d4105855a6
-
-    <div class="cover-container">
-
-      <header class="masthead clearfix">
-        <div class="inner">
-          <h3 class="masthead-brand">Cover</h3>
-          <nav class="nav nav-masthead">
-            <a class="nav-link active" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
-          </nav>
-        </div>
-      </header>
-
-      <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p>
-      </main>
-
-      <footer class="mastfoot">
-        <div class="inner">
-          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        </div>
-      </footer>
-
-    </div>
-
-  </div>
-
 </div>
