integrated initial drag and drop implementation

--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -17,7 +17,7 @@
 
       <div class="form-group">
         <%= form.label :body %>
-        <%= form.text_area :body, id: :blog_body, class:'form-control' %>
+        <%= form.text_area :body, id: :blog_body, class:'form-control', rows:13 %>
       </div>
       <h2>Technologies Used</h2>
       <div>
