--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,8 +1,12 @@
-<div class="container portfolio-form">
+<div class="album text-muted">
+ <div class="container portfolio-form">
+   <div class="row">
 
-  <h1>Create a new Portfolio Item</h1>
+      <h1>Create a new Portfolio Item</h1>
 
-  <%= render 'form', portfolio: @portfolio %>
+      <%= render 'form', portfolio: @portfolio %>
 
+    </div>
+  </div>
 </div>
 
