--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>All About Cherish</h1>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4" >
+    
+    <%= image_tag "baby.jpg", width: "100%", alt: "profile image" %>
+
+  </div>
+
+  <div class='col-md-8'>
+
+    <p> stuff about cherish
+      stuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherish
+    </p>
+
+  </div>
+
+</div>
