--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,12 @@
 
         <div class="cover-container">
           <div id="background"></div>
+            <%= video_tag('Onfire.mp4',
+              id: 'background',
+              autoplay:true,
+              loop: true,
+              muted: true
+              ) %>
 
           <%= render "shared/application_nav" %>
 
