implemented intial file uploading system via carrierwave for portfolio items

--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,5 +1,5 @@
 <div class="album text-muted">
- <div class="container portfolio-form">
+ <div class="container portfolio-container">
    <div class="row">
 
       <h1>Create a new Portfolio Item</h1>
