--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,7 +195,7 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('mountain.jpg') no-repeat;
+  background: image-url('Roots_to_Treetop.jpg') no-repeat;
   background-size: cover;
 
 }
@@ -203,3 +203,6 @@ body {
 .app-footer {
   color: white;
 }
+.nav-masthead .nav-link  {
+  padding: 5px;
+ }
