--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,12 @@
 
         <div class="cover-container">
           <div id="background"></div>
-            <%= video_tag('Onfire.mp4',
+            <%= video_tag('Roots_to_Treetop.mp4',
               id: 'background',
               autoplay:true,
               loop: true,
-              muted: true
+              muted: true,
+              poster: 'Roots_to_Treetop.jpg'
               ) %>
 
           <%= render "shared/application_nav" %>
