--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -5,11 +5,21 @@
       <div class="form-group">
         <%= form.label :title %>
         <%= form.text_field :title, id: :blog_title, class:'form-control' %>
-      </div 
+      </div> 
 
       <div class="form-group">
         <%= form.label :subtitle %>
         <%= form.text_field :title, id: :blog_title, class:'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <%= form.file_field :main_image %>
+     
+      </div>
+
+      <div class="form-group">
+        <%= form.file_field :thumb_image %>
+     
       </div>
     </div>
 
