--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -20,6 +20,11 @@
       <% @portfolio.technologies.each do |t| %>
       <p><%= t.name %></p>
       <% end %>
+      <% if logged_in?(:site_admin) %>
+      <div class="col-md-12">
+        <%= link_to "Edit Item", edit_portfolio_path(@portfolio), class: 'btn btn-warning' %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
