--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,7 +158,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 55rem;
+    width: 65rem;
   }
 }
 
@@ -205,3 +205,20 @@ body {
 .nav-masthead .nav-link  {
   padding: 5px;
  }
+
+ .tech-news {
+
+ color: black;
+ margin: 20px;
+ }
+
+.tech-news a {
+
+ color: green;
+
+ }
+
+.tech-news > .card {
+padding: 30px;
+
+}
