styling changes to blog nav/masthead

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "gritter";
+@import url('https://fonts.googleapis.com/css?family=Antic+Didone|Bentham|Marcellus|Oxygen:300|Poppins:300');
 
 /*
  * Globals
@@ -21,6 +22,7 @@ a:hover {
   background-color: #fff;
   border: .05rem solid #fff;
 }
+
 
 
 /*
