--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,8 +1,8 @@
 
 <div class="blog-header">
   <div class="container">
-    <h1 class="blog-title">My Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <h1 class="blog-title">OFF THE RAILS</h1>
+    <p class="lead blog-description">Thoughts on my bootcamp experience.</p>
     <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
   </div>
 </div>
