--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,12 +10,12 @@
   <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
 
   <p>
-    <%= @blog.body %>
+    <%= markdown @blog.body %>
   </p>
 
   <%= render 'comments/comment_form' %>
+
   <div id="comments" data-blog-id="<%= @blog.id %>">
-  <%= render @blog.comments %>
+    <%= render @blog.comments %>
   </div>
 </div>
-
