implemented style changes for about and contact pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-<h1>All About Cherish</h1>
+<div class="app-card-container">
+<div class="card">
+  <h1>All About Cherish</h1>
 
 <hr>
 
@@ -17,4 +19,8 @@
 
   </div>
 
+</div>
+
+  
+</div>
 </div>
