--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,3 +222,21 @@ body {
 padding: 30px;
 
 }
+
+.app-card-container {
+
+  color: black;
+  text-align: left;
+
+}
+
+.app-card-container > .card {
+
+  padding: 30px;
+
+}
+
+.app-card-container a {
+
+  color: black;
+}
