--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,19 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
-<p><%= number_to_currency "150" %></p>
-<p><%= number_to_percentage "150" %></p>
-<p><%= number_with_delimiter "150546894654" %></p>
-<p><a href='mailto:cherish.g.clark@gmail.com?subject=PortfolioContact' "email me">Email Me </a> </p>
-
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.142199462287!2d-111.89820268426976!3d40.42785006288641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d8554c917de07%3A0x865ac5eda44125a!2sBottega!5e0!3m2!1sen!2sus!4v1513183497883" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="app-card-container">
+  <div class="card">
+    <h1>Pages#contact</h1>
+      <hr>
+      <div class="row">
+        <div class="col-md-4">
+          <p><%= number_to_phone "5555555555" %></p>
+          <p><%= number_to_currency "150" %></p>
+          <p><%= number_to_percentage "150" %></p>
+          <p><%= number_with_delimiter "150546894654" %></p>
+          <p><a href='mailto:cherish.g.clark@gmail.com?subject=PortfolioContact' "email me">Email Me </a> </p>
+        </div>
+        <div class="col-md-8">
+          <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.142199462287!2d-111.89820268426976!3d40.42785006288641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d8554c917de07%3A0x865ac5eda44125a!2sBottega!5e0!3m2!1sen!2sus!4v1513183497883" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
