--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -16,6 +16,30 @@
     <p> stuff about cherish
       stuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherish
     </p>
+    <p>
+      <button
+        class="btn btn-primary"
+        type="button"
+        data-toggle="collapse"
+        data-target="#jobHistory"
+        aria-expanded="false"
+        aria-controler="jobHistory"
+      >
+      Job History
+    </button>
+
+    </p>
+
+      <p>
+        <div class="collapse" id="jobHistory">
+          <div class="card card-block">
+            Job 1
+            job 2
+            
+          </div>
+        </div>
+
+      </p>
 
   </div>
 
