--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: 'Marcellus', serif;
   color: #555;
 }
 
@@ -24,7 +24,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Marcellus', serif;
   font-weight: normal;
   color: #333;
 }
@@ -46,8 +46,9 @@ h6, .h6 {
 .blog-masthead {
   margin-bottom: 3rem;
   background-color: #e0dac7;
-  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+    -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
           box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+  
 }
 
 /* Nav links */
@@ -56,7 +57,7 @@ h6, .h6 {
   padding: 1rem;
   font-weight: 500;
   color: #70764c;
-  font-family: 'Marcellus', serif;
+
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -120,7 +121,7 @@ h6, .h6 {
 @media (min-width: 40em) {
   .blog-title {
     font-size: 3.5rem;
-    font-family: 'Marcellus', serif;
+
   }
 }
 
@@ -209,12 +210,21 @@ h6, .h6 {
 .blog-sidebar-source {
 
   margin-top: 20px
+}
 
 // custom styles
-
 p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-    font-family: 'Marcellus', serif;
-
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-family: 'Marcellus', serif;
 }
+
+.blog-nav {
+  background-color: #fffefa;
+  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+          box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+}
+
+
+
+
