--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name ="keywords" content="<%= @seo_keywords %>" />
-
-    <%= favicon_link_tag 'favicons/favicon.ico' %>
+ 
+    <%#= favicon_link_tag 'favicons/favicon.ico' %> 
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     
