styled application css, cover container, home buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,12 @@
       <div class="site-wrapper-inner">
 
         <div class="cover-container">
-          <div id="background"></div>
-            <%= video_tag('Roots_to_Treetop.mp4',
-              id: 'background',
-              autoplay:true,
-              loop: true,
-              muted: true,
-              poster: 'Roots_to_Treetop.jpg'
-              ) %>
+          <div id="background">
+              <%#= image_tag(
+              'samuel-zeller-379406.jpg',
+              id: 'background'
+            ) %>
+          </div>
 
           <%= render "shared/application_nav" %>
 
