--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "gritter";
 @import url('https://fonts.googleapis.com/css?family=Antic+Didone|Bentham|Marcellus|Oxygen:300|Poppins:300');
+@import url('https://fonts.googleapis.com/css?family=Advent+Pro:100');
 
 /*
  * Globals
@@ -10,7 +11,7 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color: #blue;
 }
 
 /* Custom default button */
@@ -19,7 +20,7 @@ a:hover {
 .btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
+  background-color: olive;
   border: .05rem solid #fff;
 }
 
@@ -35,9 +36,20 @@ body {
  
 }
 body {
-  color: #fff;
+  color: black;
   text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+  font-family: 'Advent Pro', sans-serif;
+
+}
+
+h1, h2,
+h3, h4,
+h5, h6 {
+  font-family: 'Advent Pro', sans-serif;
+  font-weight:bolder;
+  font-size: 4em;
+
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -46,10 +58,12 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+
+
 }
+
 .site-wrapper-inner {
+
   display: table-cell;
   vertical-align: top;
 }
@@ -62,6 +76,11 @@ body {
 .inner {
   padding: 2rem;
 }
+
+.inner .cover{
+  float: left;
+}
+
 
 
 /*
@@ -79,9 +98,11 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: bold;
-  color: rgba(255,255,255,.5);
+  color: olive;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
+  font-family: 'Advent Pro', sans-serif;
+  font-size: 1.25em;
 }
 
 .nav-masthead .nav-link:hover,
@@ -94,7 +115,7 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
+  color: #red;
   border-bottom-color: #fff;
 }
 
@@ -103,7 +124,7 @@ body {
     float: left;
   }
   .nav-masthead {
-    float: right;
+    justify-content: center;
   }
 }
 
@@ -114,10 +135,23 @@ body {
 
 .cover {
   padding: 0 1.5rem;
+
+}
+
+.right {
+  width: 50%;
+  float: right
+}
+
+.left {
+  width: 50%;
+  float:left;
+  text-align: end;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: bold;
+  font-size: 1.5em
 }
 
 
@@ -188,21 +222,22 @@ body {
 }
 
 #background {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -100;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
+  
+  // position: fixed;
+  // top: 50%;
+  // left: 50%;
+  // min-width: 100%;
+  // min-height: 100%;
+  // width: auto;
+  // height: 100%;
+  // z-index: -100;
+  // -webkit-transform: translateX(-50%) translateY(-50%);
+  // transform: translateX(-50%) translateY(-50%);
 
 }
 
 .app-footer {
-  color: white;
+  color: olive;
 }
 .nav-masthead .nav-link  {
   padding: 5px;
