--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
 <div class="inner cover">
-  <h1 class="cover-heading">Welcome.</h1>
-  <p class="lead">Software development should not be a secret process, when I take on a new project I make it my goal to not only deliver a well crafted product but to also ensure that each stage of the process is fully communicated.</p>
-  <p class="lead">
-    <%= link_to "About Me", about_path, class: "btn btn-lg btn-secondary" %>
-  </p>
+  <div class="inner cover left">
+    <h1 class="cover-heading">Howdy, I'm Cherish Clark.</h1>
+    <p class="lead">A webdeveloper in the making.</p>
+  </div>
+  <div class="inner cover right">
+    <p class="lead">
+      <%= link_to "CONTACT", contact_path, class: "btn btn-lg btn-secondary" %>
+      <%= link_to "RESUME", about_path, class: "btn btn-lg btn-secondary" %>
+    </p>
+</div>
 </div>
