--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,4 @@
   <div class="app-card-container">
-    <div class="card">
       <h1>All About Cherish</h1>
 
     <hr>
@@ -10,22 +9,22 @@
         <%= image_tag "baby.jpg", width: "100%", alt: "profile image" %>
 
         <div class="skills">
-          <% @skills.each do |skill| %>
-            <h4><%= skill.title %></h4>
+<!--           <#% @skills.each do |skill| %>
+            <h4><%#= skill.title %></h4>
               <div class="skill">
                 <div class="progress">
                   <div 
                     class="progress-bar progress-bar-striped bg-warning"
                     role="progressbar"
-                    aria-valuenow="<%= skill.percent_utilized %>" 
+                    aria-valuenow="<%#= skill.percent_utilized %>" 
                     aria-valuemax="100"
-                    style="width: <%= skill.percent_utilized %>%"
+                    style="width: <%#= skill.percent_utilized %>%"
                     >
                   </div>
               </div>
               </div>
               
-          <% end %>
+          <%# end %> -->
 
           </div>
 
@@ -34,37 +33,71 @@
       <div class='col-md-8'>
 
         <p> stuff about cherish
-          stuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherish
+          stuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about cherishstuff about 
         </p>
-        <p>
-          <button
-            class="btn btn-primary"
-            type="button"
-            data-toggle="collapse"
-            data-target="#jobHistory"
-            aria-expanded="false"
-            aria-controler="jobHistory"
-          >
-          Job History
-        </button>
-
-        </p>
-
-          <p>
-            <div class="collapse" id="jobHistory">
-              <div class="card card-block">
-                Job 1
-                job 2
-                
-              </div>
-            </div>
-
-          </p>
-
       </div>
 
     </div>
+    <p>
+        <div>Job History
+        
 
-      
-    </div>
+        <i class="fa fa-angle-down rotate" 
+        aria-hidden="true"
+        data-toggle="collapse"
+        data-target="#jobHistory"
+        aria-expanded="false"
+        aria-controler="jobHistory">
+        </i>
+        </div>
+    </p>
+
+    <p>
+      <div class="collapse" id="jobHistory">
+        <hr>
+
+        <h3 class="job company">
+          Goldman Sachs
+        </h3>        
+        <div class="job title">
+          Senior Analyst
+        </div><div class="job dates">
+          June 2014 - May 2017
+        </div>
+        <div class="job description">
+          Managed derivative workflow for 100+ clients, providing legal documentation for complex, sensitive deals while meeting stringent regulatory deadlines. Filled team lead roles in lieu of Associate Analyst. Managed Excel reports sent to senior leadership and 150 people and informing management of team progress.
+        </div>
+            
+      </div>
+
+    </p>
+
+    <p>
+
+      <div>Education
+        <i class="fa fa-angle-down rotate" 
+        aria-hidden="true"
+        data-toggle="collapse"
+        data-target="#education"
+        aria-expanded="false"
+        aria-controler="education">
+        </i>
+      </div>
+
+      <div class="collapse" id="education">
+        <hr>
+        <h3 class="education school">
+          Bottega
+        </h3>        
+
+        <div class="job dates">
+          June 2014 - May 2017
+        </div>
+        <div class="job description">
+          Managed derivative workflow for 100+ clients, providing legal documentation for complex, sensitive deals while meeting stringent regulatory deadlines. Filled team lead roles in lieu of Associate Analyst. Managed Excel reports sent to senior leadership and 150 people and informing management of team progress.
+        </div>       
+      </div>
+    </p>
+
   </div>
+
