--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="inner cover">
   <div class="inner cover left">
     <h1 class="cover-heading">Howdy, I'm Cherish Clark.</h1>
-    <p class="lead">A webdeveloper in the making.</p>
+    <p class="lead">Full-stack webdeveloper at your service.</p>
   </div>
   <div class="inner cover right">
     <p class="lead">
