--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -1,5 +1,10 @@
   <footer class="mastfoot">
     <div class="inner r">
       <p class="app-footer"> <%= copyright_generator %></p>
+      <ul class= "social-media">
+        <li><a href="#"> <%= fa_icon "github" %></a></li>
+        <li><a href="#"> <%= fa_icon "linkedin" %></a></li>
+        <li><a href="#"> <%= fa_icon "instagram" %></a></li>
+      </ul>
     </div>
   </footer>
