--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -36,21 +36,36 @@ body {
   background-color: #f7f7f7;
 }
 
-.card {
-  float: left;
-  width: 100%;
-  padding: .75rem;
-  margin-bottom: 2rem;
-  border: 0;
+// .card {
+//   float: left;
+//   width: 100%;
+//   padding: .75rem;
+//   margin-bottom: 2rem;
+//   border: 0;
+// }
+
+// .card > img {
+//   margin-bottom: .75rem;
+// }
+
+// .card-text {
+//   font-size: 85%;
+// }
+
+.portfolio {
+
 }
 
-.card > img {
-  margin-bottom: .75rem;
+.portfolio .left img {
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-right: 100px solid red;
+  border-bottom: 50px solid transparent;
+
 }
 
-.card-text {
-  font-size: 85%;
-}
+
 
 footer {
   padding-top: 3rem;
