--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,18 @@
 <div class="inner cover">
+
   <div class="inner cover left">
     <h1 class="cover-heading">Howdy, I'm Cherish Clark.</h1>
-    <p class="lead">Full-stack webdeveloper at your service.</p>
+    <p class="lead">Full-stack web developer at your service.</p>
   </div>
+
   <div class="inner cover right">
     <p class="lead">
-      <%= link_to "CONTACT", contact_path, class: "btn btn-lg btn-secondary" %>
-      <%= link_to "RESUME", about_path, class: "btn btn-lg btn-secondary" %>
+      <ul>
+        <li> <%= link_to "CONTACT", contact_path, class: "btn btn-lg btn-secondary" %></li>
+        <li> <%= link_to "RESUME", about_path, class: "btn btn-lg btn-secondary" %></li>
+      </ul>
+
     </p>
-</div>
+  </div>
+
 </div>
