--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,9 @@
 @import url('https://fonts.googleapis.com/css?family=Antic+Didone|Bentham|Marcellus|Oxygen:300|Poppins:300');
 @import url('https://fonts.googleapis.com/css?family=Advent+Pro:100');
 
+// colors for website
+// https://material.io/color/#!/?view.left=0&view.right=0&secondary.color=9E9D24&primary.color=FAFAFA&primary.text.color=616161&secondary.text.color=212121
+
 /*
  * Globals
  */
@@ -18,15 +21,30 @@ a:hover {
 
 /* Custom default button */
 .btn-secondary,
-.btn-secondary:hover,
+
 .btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #9e9d24;
-  border: .05rem solid #fff;
+  background-color: transparent;
+  border: .05rem solid #9e9d24;
+  margin: 5px;
+  border-radius: 2px;
+
 }
 
+.btn-secondary:hover {
+  background-color: #9e9d24;
+  transform: scale(1.1);
+  transition: all .5s;
+}
 
+.inner.cover.right ul {
+  list-style-type:none;
+}
+
+.inner.cover.right li {
+  width: fit-content;
+}
 
 /*
  * Base structure
@@ -35,12 +53,13 @@ a:hover {
 html,
 body {
   height: 100%;
+
  
 }
 body {
   color: black;
   text-align: center;
-  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+  text-shadow: none;
   font-family: 'Advent Pro', sans-serif;
 
 }
@@ -50,7 +69,8 @@ h3, h4,
 h5, h6 {
   font-family: 'Advent Pro', sans-serif;
   font-weight:bolder;
-  font-size: 4em;
+
+  text-shadow: 1px .5px 0px #d2cd55;
 
 }
 
@@ -70,7 +90,9 @@ h5, h6 {
   vertical-align: top;
   background-color: #f9f9f9;
   border: solid 10px #ffffff;
+  padding: 30px 20px 100px 20px;
 }
+
 .cover-container {
   margin-right: auto;
   margin-left: auto;
@@ -100,27 +122,24 @@ h5, h6 {
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: 0px 8px 0px 8px;
   font-weight: bold;
   color: olive;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
   font-family: 'Advent Pro', sans-serif;
   font-size: 1.25em;
+  text-shadow: .25px .25px;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255,255,255,.25);
+  border-bottom-color: #c6c6c6;
+  border-width: thin;
 }
 
 .nav-masthead .nav-link + .nav-link {
   margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #red;
-  border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
@@ -151,6 +170,19 @@ h5, h6 {
   width: 50%;
   float:left;
   text-align: end;
+  
+
+}
+.left .lead {
+  text-shadow: none;
+  font-size: 1.3em;
+  font-weight: 700;
+}
+
+.left h1 {
+
+text-shadow: 1px .5px 0px #d2cd55;
+
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
@@ -206,6 +238,7 @@ h5, h6 {
  * Custom Styles
  */
 
+
 .card-block {
   color: black;
   text-align: left;
@@ -241,8 +274,9 @@ h5, h6 {
 }
 
 .app-footer {
-  color: olive;
+  color: #9e9c22;
   display: inline-block;
+  text-shadow: none;
 }
 .social-media {
   list-style: none;
@@ -255,13 +289,13 @@ h5, h6 {
 }
 .social-media i {
   display: inline-block;
-  color: red;
+  color: #c6c6c6;
+  margin-left: 3px;
+  margin-right: 3px;
+  text-shadow: .5px .5px #ffffff;
 
 }
 
-.nav-masthead .nav-link  {
-  padding: 5px;
- }
 
  .tech-news {
 
@@ -301,17 +335,59 @@ h5, h6 {
   margin-bottom: 10px;
 }
 
-// test for rotating arrow
+// custom styles
 
-.rotate{
-    -moz-transition: all 2s linear;
-    -webkit-transition: all 2s linear;
-    transition: all 2s linear;
+#profile-image {
+  width: 100px;
+  height: auto;
+  border-radius: 50%;
 }
 
-.rotate.down{
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
+.about {
+  font-size: 1.5em;
+  font-weight: 700;
+  text-shadow: none;
+  margin-left: 120px;
 }
+
+#about-name {
+  font-size: 4em;
+}
+.cover-heading {
+  font-size: 4em;
+}
+
+.contact-icon {
+
+}
+.row ul {
+  list-style: none;
+}
+
+.row li {
+  justify-content: left;
+  display: -webkit-box;
+}
+
+.contact-box {
+  display: inline-block;
+
+  font-size: 2em;
+
+}
+
+.row a, a:visited{
+  color: black;
+}
+      
+
+.contact-row {
+  justify-content: center;
+}
+
+.card-block {
+  padding: 30px;
+}
+
+// alert
+
