--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -16,8 +16,9 @@
 }
 
 body {
-  font-family: 'Marcellus', serif;
+  font-family: 'Advent Pro', sans-serif;
   color: #555;
+  font-weight: 700;
 }
 
 h1, h2,
@@ -26,6 +27,7 @@ h5, h6 {
   font-family: 'Advent Pro', sans-serif;
   font-weight:bolder;
   font-size: 4em;
+
 
 }
 
@@ -154,12 +156,13 @@ h5, h6 {
   margin-bottom: 0;
 
   font-size: 2rem;
-  font-weight: normal;
+
 }
 .blog-description {
   font-size: 1.1rem;
   color: #999;
-  font-family: 'Marcellus', serif;
+  font-weight: 700;
+
 }
 
 @media (min-width: 40em) {
@@ -210,7 +213,7 @@ h5, h6 {
 .blog-post-title {
   margin-bottom: .25rem;
   font-size: 2.5rem;
-  font-family: 'Marcellus', serif;
+
 }
 .blog-post-meta {
   margin-bottom: 1.25rem;
@@ -223,11 +226,12 @@ h5, h6 {
  */
 
 .blog-footer {
-  padding: 2.5rem 0;
+  padding: 10px;
   color: #999;
   text-align: center;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
+  background-color: #transparent;
+  border-top: none;
+  width: 100%
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
@@ -260,7 +264,7 @@ h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  font-family: 'Marcellus', serif;
+
 }
 
 .blog-nav {
@@ -269,6 +273,55 @@ p {
           box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
 }
 
+.blog-card {
+  padding: 20px;
+  border-radius: 0px;
+  box-shadow: .5px .5px 1px #d6d6d6;
+}
 
+// custom nav
+.masthead {
+  margin-bottom: 2rem;
+  padding: 30px;
+  width:100%;
+}
 
+.masthead-brand {
+  margin-bottom: 0;
+}
+
+.nav-masthead .nav-link {
+  padding: 0px 8px 0px 8px;
+  font-weight: bold;
+  color: olive;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
+  font-family: 'Advent Pro', sans-serif;
+  font-size: 1.25em;
+  text-shadow: .25px .25px;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: #c6c6c6;
+  border-width: thin;
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+// custom styles
+
+a {
+
+  color: black;
+
+}
+
+a:hover {
+
+  color: olive;
+  text-decoration:none;
+}
 
