--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,10 +1,12 @@
-<div class="blog-post">
-  <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
-  <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
-  
-  <%= render partial:'blogs/admin_actions', locals: { blog: blog} %>
+<div class="blog-post app-card-container">
+  <div class="card blog-card">
+    <h2 class="blog-post-title"><%= link_to blog.title.upcase, blog %></h2>
+    <p class="blog-post-meta">Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</p>
+    
+    <%= render partial:'blogs/admin_actions', locals: { blog: blog} %>
 
-  <p>
-    <%= markdown blog.body %>
-  </p>
+    <p>
+      <%= markdown blog.body %>
+    </p>
+  </div>
 </div>
