--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -16,9 +16,7 @@
 
   <body>
  
-    <%= render 'shared/portfolio_nav' %>
-  
-    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
+    <%= render "shared/application_nav" %>
     
 
     <%= yield %>
