--- a/app/views/shared/_application_footer.html.erb
+++ b/app/views/shared/_application_footer.html.erb
@@ -2,9 +2,9 @@
     <div class="inner r">
       <p class="app-footer"> <%= copyright_generator %></p>
       <ul class= "social-media">
-        <li><a href="#"> <%= fa_icon "github" %></a></li>
-        <li><a href="#"> <%= fa_icon "linkedin" %></a></li>
-        <li><a href="#"> <%= fa_icon "instagram" %></a></li>
+        <li><a href="https://github.com/CherishClark" target="_blank"> <%= fa_icon "github" %></a></li>
+        <li><a href="https://www.linkedin.com/in/cherishclark/" target="_blank"> <%= fa_icon "linkedin" %></a></li>
+        <li><a href="https://www.instagram.com/icherishyou/" target="_blank"> <%= fa_icon "instagram" %></a></li>
       </ul>
     </div>
   </footer>
