--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -8,6 +8,19 @@
   </div>
 </div>
 
+<!-- attempt at toggle nav bar -->
+
+<!-- <div class="masthead clearfix">
+  <div class="inner collapse" id= "navbarHeader">
+    <h3 class="masthead-brand">Cherish Clark</h3> -->
+<!--     <nav class="nav nav-masthead app-nav ">
+      <%#= nav_helper 'nav-link', 'span' %>
+      <%#= login_helper 'nav-link' %>
+    </nav>
+  </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="avbar-toggler-icon fa fa-bars" aria-hidden="true"></i>
+</div> -->
 
 
 
