--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,9 @@ a:hover {
 /* Custom default button */
 .btn-secondary,
 
+
+
+
 .btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
@@ -29,13 +32,16 @@ a:hover {
   border: .05rem solid #9e9d24;
   margin: 5px;
   border-radius: 2px;
+  box-shadow: 0px 1px 2px #828282;
 
 }
 
 .btn-secondary:hover {
   background-color: #9e9d24;
+  box-shadow: 0px 1px 8px #828282;
   transform: scale(1.1);
   transition: all .5s;
+
 }
 
 .inner.cover.right ul {
@@ -175,7 +181,7 @@ h5, h6 {
 }
 .left .lead {
   text-shadow: none;
-  font-size: 1.3em;
+  font-size: 1.8em;
   font-weight: 700;
 }
 
@@ -330,16 +336,20 @@ text-shadow: 1px .5px 0px #d2cd55;
   color: black;
 }
 
-.skill {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
+// .skill {
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+// }
 
 // custom styles
 
-#profile-image {
+#box-profile-image {
   width: 100px;
-  height: auto;
+  height: 100px;
+}
+#profile-image {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
 
@@ -354,7 +364,7 @@ text-shadow: 1px .5px 0px #d2cd55;
   font-size: 4em;
 }
 .cover-heading {
-  font-size: 4em;
+  font-size: 5em;
 }
 
 .contact-icon {
@@ -387,6 +397,10 @@ text-shadow: 1px .5px 0px #d2cd55;
 
 .card-block {
   padding: 30px;
+}
+
+.navbar-toggler-icon {
+  color: black;
 }
 
 // alert
