--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
     <p class="lead">
       <ul>
         <li> <%= link_to "CONTACT", contact_path, class: "btn btn-lg btn-secondary" %></li>
-        <li> <%= link_to "RESUME", about_path, class: "btn btn-lg btn-secondary" %></li>
+        <li> <%= link_to "RESUME", asset_path('CherishClarkResume.pdf'), class: "btn btn-lg btn-secondary" %></li>
       </ul>
 
     </p>
