--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -15,9 +15,9 @@
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
     <ol class="list-unstyled social-links">
-      <li><a href="#"> <%= fa_icon "github" %></a></li>
-      <li><a href="#"> <%= fa_icon "facebook" %></a></li>
-      <li><a href="#"> <%= fa_icon "twitter" %></a></li>
+      <li><a href="https://github.com/CherishClark" target="_blank"> <%= fa_icon "github" %></a></li>
+      <li><a href="https://www.linkedin.com/in/cherishclark/" target="_blank"> <%= fa_icon "linkedin" %></a></li>
+      <li><a href="https://www.instagram.com/icherishyou/" target="_blank"> <%= fa_icon "instagram" %></a></li>
 
     </ol>
   </div>
